Запись в бизнес-журнал событий входа/выхода пользователей и настройка записываемых категорий событий.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6258 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
@@ -13,6 +13,8 @@ lecm-busjournal_businessJournalModel.type.lecm-busjournal_eventCategory.title=Ev
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_eventCategory.description=Event Category
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_eventCategory-code.title=Code
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_eventCategory-code.description=Code
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_eventCategory-on.title=On
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_eventCategory-on.description=Turn on category logging
 
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_messageTemplate.title=Message Template
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_messageTemplate.description=Message Template
