--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/menu/menu.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/menu/menu.get.properties
@@ -1,2 +1,3 @@
 lecm.business-journal.records.btn=Records
 lecm.business-journal.archive-settings.btn=Archiver Settings
+lecm.business-journal.logger-settings.btn=Logger Settings
