--- a/lecm-business-journal/share/src/main/resources/alfresco/web-extension/ru/it/lecm/business-journal/form.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/web-extension/ru/it/lecm/business-journal/form.properties
@@ -1,6 +1,6 @@
 page.business-journal=Business Journal > Summary Log
-page.business-journal.filter.label=(content filtered)
-page.business-journal-settings=Business Journal > Archiver Settings
+page.businkess-journal.filter.label=(content filtered)
+page.business-journal-archiver-settings=Business Journal > Archiver Settings
 
 header.business-journal.label=Business Journal
 header.business-journal.description=Business Journal
@@ -21,3 +21,4 @@ message.alert.no-elements=No elements
 message.alert.incorrect-date-format=Incorrect date format\!
 
 info.search.archive=Search in archive
+info.name=Event category
