ALF-1857: Модуль АРМ
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6259 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -319,6 +319,13 @@
 			<scope>runtime</scope>
 			<type>amp</type>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.arm</groupId>
+			<artifactId>arm-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
 	</dependencies>
 
 	<build>
