--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 		<module>lecm-outgoing</module>
 		<module>lecm-model-editor</module>
         <module>lecm-eds-documents</module>
+        <module>lecm-arm</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
