исправлен один переход в машине состояний, он был совсем неправильный добавлены скрипты на входе в статус "на регистрации"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6261 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-outgoing/repo/pom.xml
+++ b/lecm-outgoing/repo/pom.xml
@@ -60,6 +60,12 @@
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.statemachine</groupId>
+			<artifactId>statemachine-api</artifactId>
+			<version>${platform.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
