убрал слово Module из названия модуля "Исходящие"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6273 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-outgoing/api/pom.xml
+++ b/lecm-outgoing/api/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>outgoing-repo-api</artifactId>
-	<name>Logic ECM Outgoing Module Repo API</name>
+	<name>Logic ECM Outgoing Repo API</name>
 
 	<dependencies>
 		<dependency>
