--- a/lecm-outgoing/share/pom.xml
+++ b/lecm-outgoing/share/pom.xml
@@ -10,7 +10,7 @@
 
 	<artifactId>outgoing-share</artifactId>
 	<packaging>amp</packaging>
-	<name>Logic ECM Outgoing Module Share</name>
+	<name>Logic ECM Outgoing Share</name>
 	<!--
 		need to list these as a provided so that Maven doesn't download them
 		and include them in the AMP, they are provided by Alfresco
