ALF-1859: Интерфейс редактирования настроек АРМов (справочника) - контрол для выбора колонок и запросов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6277 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -17,6 +17,7 @@ lecm-arm_model.property.lecm-arm_counter-description.title=Counter description
 lecm-arm_model.association.lecm-arm_fields-assoc.title=Fields
 
 lecm-arm_model.type.lecm-arm_field.title=Field
+lecm-arm_model.property.lecm-arm_field-title.title=Title
 lecm-arm_model.property.lecm-arm_field-name.title=Field name
 lecm-arm_model.property.lecm-arm_field-format-string.title=Format string
 lecm-arm_model.property.lecm-arm_field-sortable.title=Sortable
