--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
@@ -2,3 +2,5 @@ header.arm-settings.label=ARM settings
 
 page.title.arm.settings=ARM settings
 page.content.filter.labe=Content filtered
+
+page.title.arm=ARM
