--- a/lecm-arm/repo/pom.xml
+++ b/lecm-arm/repo/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-core</artifactId>
         </dependency>
+	    <dependency>
+		    <groupId>org.alfresco</groupId>
+		    <artifactId>alfresco-data-model</artifactId>
+	    </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-repository</artifactId>
