ALF-1813 регламент подписания исходящих  - сам регламент, по образу и подобию согласования  - javaScriptExtension для бизнес-ролиги регламента в процессе...
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6304 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/lecm-signing/pom.xml
+++ b/lecm-workflow/lecm-signing/pom.xml
@@ -5,20 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.it.lecm</groupId>
-        <artifactId>platform</artifactId>
+        <groupId>ru.it.lecm.workflow</groupId>
+        <artifactId>workflow</artifactId>
         <version>1.1.0</version>
     </parent>
 
-    <groupId>ru.it.lecm.workflow</groupId>
-    <artifactId>workflow</artifactId>
+    <groupId>ru.it.lecm.workflow.signing</groupId>
+    <artifactId>signing</artifactId>
     <packaging>pom</packaging>
-    <name>Logic ECM Workflow</name>
+    <name>Logic ECM Signing</name>
 
     <modules>
-		<module>api</module>
+        <module>api</module>
         <module>repo</module>
         <module>share</module>
-        <module>lecm-signing</module>
     </modules>
 </project>
