Регламент резервирования регистрационного номера
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6306 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 		<module>lecm-outgoing</module>
 		<module>lecm-model-editor</module>
         <module>lecm-eds-documents</module>
+		<module>lecm-reservation</module>
         <module>lecm-arm</module>
 	</modules>
 	<scm>
