--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -270,6 +270,13 @@
 			<type>amp</type>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.reservation</groupId>
+			<artifactId>reservation-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
