ALF-1813 уведомление о завершении подписания
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6340 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -113,9 +113,10 @@
 		<module>lecm-incoming</module>
 		<module>lecm-outgoing</module>
 		<module>lecm-model-editor</module>
-        <module>lecm-eds-documents</module>
+		<module>lecm-eds-documents</module>
 		<module>lecm-reservation</module>
-        <module>lecm-arm</module>
+		<module>lecm-arm</module>
+		<module>lecm-workflow</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
