ALF-1859: Интерфейс редактирования настроек АРМов (справочника) - переводы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6357 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
@@ -4,3 +4,5 @@ page.title.arm.settings=ARM settings
 page.content.filter.labe=Content filtered
 
 page.title.arm=ARM
+
+label.arm.field.add.fromModel=Add fields form model
