[~]дерево в АРМ: - скрипт подсчета элементов по запросу - сборка результирующего запроса + счетчик в дереве - ссылка на АРМ СЭД в меню - заготовка кода для сохранения последнего выбранного узла
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6362 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
@@ -1,4 +1,5 @@
 header.arm-settings.label=ARM settings
+header.arm.label=ARM
 
 page.title.arm.settings=ARM settings
 page.content.filter.labe=Content filtered
