резервирование регномеров, чистка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6366 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reservation/repo/pom.xml
+++ b/lecm-reservation/repo/pom.xml
@@ -56,18 +56,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>ru.it.lecm.dictionary</groupId>
-			<artifactId>dictionary-repo-api</artifactId>
-			<version>${platform.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>ru.it.lecm.documents</groupId>
 			<artifactId>documents-repo-api</artifactId>
 			<version>${platform.version}</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
+		</dependency>		<dependency>
 			<groupId>ru.it.lecm.regnumbers</groupId>
 			<artifactId>lecm-regnumbers-repo-api</artifactId>
 			<version>${platform.version}</version>
