Добавлен модуль регламента согласования, зарефакторенный согласно новой концепции.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6373 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/pom.xml
+++ b/lecm-workflow/pom.xml
@@ -20,5 +20,7 @@
         <module>repo</module>
         <module>share</module>
         <module>lecm-signing</module>
+		<module>lecm-review</module>
+		<module>lecm-approval</module>
     </modules>
 </project>
