--- a/lecm-arm/repo/pom.xml
+++ b/lecm-arm/repo/pom.xml
@@ -71,6 +71,11 @@
 		    <artifactId>documents-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.security</groupId>
+		    <artifactId>lecm-security-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
