--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -278,6 +278,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.workflow</groupId>
+			<artifactId>workflow-share</artifactId>
+			<version>${platform.version}</version>
+			<type>amp</type>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.workflow.signing</groupId>
 			<artifactId>signing-share</artifactId>
 			<version>${platform.version}</version>
