ALF-1859 Интерфейс редактирования настроек АРМов (справочника) порядок аккордионов и узлов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6415 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -10,6 +10,7 @@ lecm-arm_model.type.lecm-arm_node.title=Node
 lecm-arm_model.association.lecm-arm_node-query-assoc.title=Query
 
 lecm-arm_model.property.lecm-arm_types.title=Types
+lecm-arm_model.property.lecm-arm_order.title=Order
 lecm-arm_model.property.lecm-arm_filters.title=Filters
 lecm-arm_model.property.lecm-arm_counter-enable.title=Counter enable
 lecm-arm_model.property.lecm-arm_counter-limitation.title=Counter limitation
