ALF-1858: Структура данных для хранения настроек АРМов (справочник)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6425 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -4,13 +4,13 @@ lecm-arm_model.property.lecm-arm_use-by-default.title=Use by default
 
 lecm-arm_model.type.lecm-arm_accordion.title=Accordion
 lecm-arm_model.association.lecm-arm_business-roles-assoc.title=Business roles
-lecm-arm_model.association.lecm-arm_accordion-query-assoc.title=Query
 
 lecm-arm_model.type.lecm-arm_node.title=Node
-lecm-arm_model.association.lecm-arm_node-query-assoc.title=Query
+lecm-arm_model.association.lecm-arm_node-child-rule-assoc.title=Query
 
 lecm-arm_model.property.lecm-arm_types.title=Types
 lecm-arm_model.property.lecm-arm_order.title=Order
+lecm-arm_model.property.lecm-arm_search-query.title=Search query
 lecm-arm_model.property.lecm-arm_filters.title=Filters
 lecm-arm_model.property.lecm-arm_counter-enable.title=Counter enable
 lecm-arm_model.property.lecm-arm_counter-limitation.title=Counter limitation
@@ -23,9 +23,7 @@ lecm-arm_model.property.lecm-arm_field-name.title=Field name
 lecm-arm_model.property.lecm-arm_field-format-string.title=Format string
 lecm-arm_model.property.lecm-arm_field-sortable.title=Sortable
 
-lecm-arm_model.property.lecm-arm_search-query.title=Search query
-lecm-arm_model.type.lecm-arm_static-query.title=Static query
-lecm-arm_model.type.lecm-arm_dynamic-query.title=Dynamic query
-lecm-arm_model.property.lecm-arm_list-query.title=List query
-lecm-arm_model.type.lecm-arm_dynamic-dictionary-query.title=Dynamic query
-lecm-arm_model.association.lecm-arm_query-dictionary-assoc.title=Dictionary
+lecm-arm_model.type.lecm-arm_query-child-rule.title=Dynamic query
+lecm-arm_model.property.lecm-arm_list-query-child-rule.title=List query
+lecm-arm_model.type.lecm-arm_dictionary-child-rule.title=Dynamic query
+lecm-arm_model.association.lecm-arm_child-rule-dictionary-assoc.title=Dictionary
