--- a/lecm-eds-documents/repo/pom.xml
+++ b/lecm-eds-documents/repo/pom.xml
@@ -73,6 +73,12 @@
             <version>1.6R7</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
