--- a/lecm-outgoing/repo/pom.xml
+++ b/lecm-outgoing/repo/pom.xml
@@ -54,6 +54,11 @@
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>ru.it.lecm.eds-documents</groupId>
+		    <artifactId>eds-documents-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
