Отчет "Журнал регистрации исходящих". Редеплой регламента "запросить номер" через переменную redeploy.process.definitions.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6445 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-outgoing/repo/pom.xml
+++ b/lecm-outgoing/repo/pom.xml
@@ -109,6 +109,11 @@
 				<directory>src/main/config</directory>
 				<targetPath>alfresco/module/${project.artifactId}</targetPath>
 			</resource>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/config/reportdefinitions</directory>
+				<targetPath>reportdefinitions</targetPath>
+			</resource>
 		</resources>
 	</build>
 </project>
