--- a/lecm-outgoing/repo/pom.xml
+++ b/lecm-outgoing/repo/pom.xml
@@ -58,6 +58,7 @@
 		    <groupId>ru.it.lecm.eds-documents</groupId>
 		    <artifactId>eds-documents-repo-api</artifactId>
 		    <version>${project.version}</version>
+			<scope>provided</scope>
 	    </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
