--- a/lecm-reservation/repo/pom.xml
+++ b/lecm-reservation/repo/pom.xml
@@ -60,7 +60,8 @@
 			<artifactId>documents-repo-api</artifactId>
 			<version>${platform.version}</version>
 			<scope>provided</scope>
-		</dependency>		<dependency>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.regnumbers</groupId>
 			<artifactId>lecm-regnumbers-repo-api</artifactId>
 			<version>${platform.version}</version>
@@ -72,6 +73,12 @@
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>ru.it.lecm.eds-documents</groupId>
+		    <artifactId>eds-documents-repo-api</artifactId>
+		    <version>${project.version}</version>
+			<scope>provided</scope>
+	    </dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
