ALF-1776: Реализация механизма "Вложения-ссылки" - в дашлете изменена иконка для вложений-ссылок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6453 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/web-extension/ru/it/lecm/documents/form.properties
@@ -52,3 +52,5 @@ documents.report.failure=Report failed
 document.report.default.title=Set report parameters
 
 label.table.row.create.title=Add
+
+title.attachment.isLink=This is link attachment
