Добавлены лэйблы для lecm-workflow.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6457 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/form.properties
+++ b/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/form.properties
@@ -2,3 +2,7 @@ label.resultList=Result list
 
 workflow.result.report.success=Report formed succesfully
 workflow.result.report.failure=Report failed
+
+lecm-workflow-result_workflow-result-item-employee-position=Position
+lecm-workflow-result_workflow-result-item-employee-unit=Unit
+
