--- a/lecm-reservation/repo/pom.xml
+++ b/lecm-reservation/repo/pom.xml
@@ -76,9 +76,15 @@
 		<dependency>
 		    <groupId>ru.it.lecm.eds-documents</groupId>
 		    <artifactId>eds-documents-repo-api</artifactId>
-		    <version>${project.version}</version>
+		    <version>${platform.version}</version>
 			<scope>provided</scope>
 	    </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.statemachine</groupId>
+			<artifactId>statemachine-api</artifactId>
+		    <version>${platform.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
