модуль lecm-reservation переехал под контроль lecm-workflow рефакторинг сервис контекстов корректные права регистратором еще не до конца сделаны
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6462 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/pom.xml
+++ b/lecm-workflow/pom.xml
@@ -22,5 +22,6 @@
         <module>lecm-signing</module>
 		<module>lecm-review</module>
 		<module>lecm-approval</module>
+        <module>lecm-reservation</module>
     </modules>
 </project>
