reservation прописан в сборку сервера
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6463 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -327,7 +327,7 @@
 			<type>amp</type>
 		</dependency>
 		<dependency>
-			<groupId>ru.it.lecm.reservation</groupId>
+			<groupId>ru.it.lecm.workflow.reservation</groupId>
 			<artifactId>reservation-repo</artifactId>
 			<version>${platform.version}</version>
 			<scope>runtime</scope>
