--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -1,5 +1,5 @@
-lecm-document_model.property.lecm-document_regnum.title=Registration number
-lecm-document_model.property.lecm-document_regnum.description=Registration number
+lecm-document_model.property.lecm-document_regnum.title=Number
+lecm-document_model.property.lecm-document_regnum.description=Number
 lecm-document_model.property.lecm-document_creator.title=Author
 lecm-document_model.property.lecm-document_creator.description=Author
 lecm-document_model.property.lecm-document_doc-type.title=Doc Type
