--- a/lecm-workflow/lecm-reservation/repo/pom.xml
+++ b/lecm-workflow/lecm-reservation/repo/pom.xml
@@ -85,6 +85,16 @@
 			<version>${platform.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.workflow</groupId>
+			<artifactId>workflow-repo-api</artifactId>
+			<version>${platform.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-engine</artifactId>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
