[~]заготовка для тулбара в АРМ
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6491 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/documents-list/toolbar/toolbar.get.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/documents-list/toolbar/toolbar.get.properties
@@ -1,2 +1,3 @@
-lecm.arm.add-element=Add element
-lecm.arm.delete-element=Delete element
+btn.filters=Filters
+button.apply=Apply
+filters-block=Filters
