[+] Внутренние. Заготовка + перемещение архивных документов по получателям
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6500 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
 		<module>lecm-eds-documents</module>
 		<module>lecm-arm</module>
 		<module>lecm-workflow</module>
+		<module>lecm-internal</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
