АРМ: кнопка создания документов (заготовка)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6503 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/pom.xml
+++ b/lecm-arm/repo/pom.xml
@@ -76,6 +76,12 @@
 		    <artifactId>lecm-security-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.statemachine</groupId>
+		    <artifactId>statemachine-api</artifactId>
+		    <version>${project.version}</version>
+		    <scope>provided</scope>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
