[~] АРМ: заготовка под справочник фильтров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6505 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -27,3 +27,10 @@ lecm-arm_model.type.lecm-arm_query-child-rule.title=Dynamic query
 lecm-arm_model.property.lecm-arm_list-query-child-rule.title=List query
 lecm-arm_model.type.lecm-arm_dictionary-child-rule.title=Dynamic query
 lecm-arm_model.association.lecm-arm_child-rule-dictionary-assoc.title=Dictionary
+
+lecm-arm_model.type.lecm-arm_filter.title=Filter
+lecm-arm_model.property.lecm-arm_filter-code.title=Code
+lecm-arm_model.property.lecm-arm_filter-multiple-select.title=Multiple Select
+lecm-arm_model.property.lecm-arm_filter-query.title=FTS Query
+lecm-arm_model.property.lecm-arm_filter-class.title=Class
+lecm-arm_model.property.lecm-arm_filter-values.title=Values
