[~] АРМ: создание/редактирование фильтров [~] колонка с именем по умолчанию для узла
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6511 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -16,6 +16,7 @@ lecm-arm_model.property.lecm-arm_counter-enable.title=Counter enable
 lecm-arm_model.property.lecm-arm_counter-limitation.title=Counter limitation
 lecm-arm_model.property.lecm-arm_counter-description.title=Counter description
 lecm-arm_model.association.lecm-arm_fields-assoc.title=Fields
+lecm-arm_model.association.lecm-arm_filters-assoc.title=Filters
 
 lecm-arm_model.type.lecm-arm_field.title=Field
 lecm-arm_model.property.lecm-arm_field-title.title=Title
