--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
@@ -7,3 +7,6 @@ page.content.filter.labe=Content filtered
 page.title.arm=ARM
 
 label.arm.field.add.fromModel=Add fields form model
+
+label.new-filter.btn=New Filter
+label.create-filter.title=Create Filter
