Заготовка страницы маршрутов документов.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6514 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/form.properties
+++ b/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/form.properties
@@ -6,3 +6,11 @@ workflow.result.report.failure=Report failed
 lecm-workflow-result_workflow-result-item-employee-position=Position
 lecm-workflow-result_workflow-result-item-employee-unit=Unit
 
+page.workflow.filteredLabel=(content filtered)
+page.routes.title=Documents routes
+page.routes.description=Maintain documents routes
+cm_title=Title
+label.routes.new-common-route.title=Creation of new common route
+label.routes.new-private-route.title=Creation of new private route
+button.new-private-route=Create private route
+button.new-common-route=Create common route
