--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -28,6 +28,14 @@ lecm-arm_model.type.lecm-arm_query-child-rule.title=Dynamic query
 lecm-arm_model.property.lecm-arm_list-query-child-rule.title=List query
 lecm-arm_model.type.lecm-arm_dictionary-child-rule.title=Dynamic query
 lecm-arm_model.association.lecm-arm_child-rule-dictionary-assoc.title=Dictionary
+lecm-arm_model.type.lecm-arm_statuses-child-rule.title=Statuses query
+lecm-arm_model.property.lecm-arm_statuses-rule.title=Rule
+lecm-arm_model.property.lecm-arm_selected-statuses.title=Statuses
+listconstraint.lecm-arm_statuses-rule-constraint.ALL=All
+listconstraint.lecm-arm_statuses-rule-constraint.ALL_NOT_ARCHIVE=All not archive
+listconstraint.lecm-arm_statuses-rule-constraint.ALL_ARCHIVE=All archive
+listconstraint.lecm-arm_statuses-rule-constraint.SELECTED=Selected
+listconstraint.lecm-arm_statuses-rule-constraint.EXCEPT_SELECTED=Except selected
 
 lecm-arm_model.type.lecm-arm_filter.title=Filter
 lecm-arm_model.property.lecm-arm_filter-code.title=Code
