--- a/lecm-workflow/repo/pom.xml
+++ b/lecm-workflow/repo/pom.xml
@@ -92,6 +92,12 @@
 			<artifactId>workflow-repo-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.delegation</groupId>
+			<artifactId>lecm-delegation-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
