--- a/lecm-arm/api/pom.xml
+++ b/lecm-arm/api/pom.xml
@@ -71,7 +71,17 @@
             <artifactId>dictionary-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
+        <dependency>
+            <groupId>ru.it.lecm.orgstructure</groupId>
+            <artifactId>orgstructure-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.documents</groupId>
+            <artifactId>documents-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
 	   The scm is required for the buildnumber-maven-plugin which is required
