[+] ALF-1907. Групповые операции. Редактор.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6534 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -305,6 +305,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.group-actions</groupId>
+            <artifactId>group-actions-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
