--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
 		<module>lecm-arm</module>
 		<module>lecm-workflow</module>
 		<module>lecm-internal</module>
+		<module>lecm-group-actions</module>
 	</modules>
 	<scm>
 		<connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
