--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -361,7 +361,14 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>ru.it.lecm.group-actions</groupId>
+            <artifactId>group-actions-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>${webapp.name}</finalName>
