Отображение фильтров в АРМе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6535 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/documents-list/grid/datagrid.get.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/documents-list/grid/datagrid.get.properties
@@ -46,3 +46,6 @@ button.clear=Clear
 label.keywords=Keywords
 
 logicecm.dictionary.view=View
+
+arm.filters.current=Current filters
+arm.delete.all-filters=Delete all
