--- a/lecm-group-actions/share/pom.xml
+++ b/lecm-group-actions/share/pom.xml
@@ -37,9 +37,13 @@
             <groupId>org.springframework.extensions.surf</groupId>
             <artifactId>spring-webscripts</artifactId>
         </dependency>
-        
-        
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
+
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-web-framework-commons</artifactId>
+        </dependency>
+
+        <!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
 	<build>
