--- a/lecm-arm/api/pom.xml
+++ b/lecm-arm/api/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>documents-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.statemachine</groupId>
+            <artifactId>statemachine-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
