ALF-1897 Обеспечить возможность выбора шаблона отчета пользователем - Интерфейс в РО
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6582 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -28,6 +28,8 @@ lecm-rpeditor_model.property.lecm-rpeditor_reportParameterTypeLabel2.description
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.title=Report Template
 lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.description=Report Template
+lecm-rpeditor_model.property.lecm-rpeditor_templateCode.title=Template Code
+lecm-rpeditor_model.property.lecm-rpeditor_templateCode.description=Template Code
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.title=Report Template File
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.description=Report Template File
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateType.title=Report Template Type
