--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/template-edit/template-edit.main.get.properties
@@ -1,5 +1,10 @@
 actions.select=Select
-label.current-template=Current Template
+actions.more=More
+label.current-template=Current Templates
 label.select-template=Select Template
 
 button.export-template=Export Template
+button.save-as-template=Save as...
+
+message.copy.success=Coping successed
+message.copy.failure=Coping failured
