--- a/lecm-group-actions/repo/src/main/config/messages/group-actions.properties
+++ b/lecm-group-actions/repo/src/main/config/messages/group-actions.properties
@@ -1,9 +1,10 @@
 lecm-group-actions_model.property.lecm-group-actions_expression.title=Access condition
 lecm-group-actions_model.property.lecm-group-actions_type.title=Type Access
 lecm-group-actions_model.property.lecm-group-actions_statuses.title=Statuses access
-lecm-group-actions_model.property.lecm-group-actions_isGroup.title=
+lecm-group-actions_model.property.lecm-group-actions_isGroup.title=Group Action
 lecm-group-actions_model.property.lecm-group-actions_order.title=Priority
 lecm-group-actions_model.property.lecm-group-actions_script.title=Script
 lecm-group-actions_model.property.lecm-group-actions_form-fields-ref.title=Script Data
 lecm-group-actions_model.property.lecm-group-actions_field-id=Field Id
 lecm-group-actions_model.property.lecm-group-actions_field-type.title=Data Type
+lecm-group-actions_model.property.lecm-group-actions_forCollection.title=For Collection
