Добавлены два модуля для лицензирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6594 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 
 	<modules>
 		<module>lecm-base</module>
+		<!--<module>lecm-base-utils</module>-->
 		<module>lecm-security</module>
 		<module>lecm-orgstructure</module>
 		<module>lecm-jasperreports-forms</module>
