--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -312,6 +312,20 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+        <!--<dependency>
+            <groupId>ru.it.lecm.licensing</groupId>
+            <artifactId>licensing-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.base-utils</groupId>
+            <artifactId>base-utils-share</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>-->
 	</dependencies>
 
 	<build>
