--- a/lecm-workflow/repo/src/main/config/messages/lecm-workflow.properties
+++ b/lecm-workflow/repo/src/main/config/messages/lecm-workflow.properties
@@ -6,7 +6,6 @@ listconstraint.lecm-workflow_workflow-type-constraint.REVIEW=Review
 listconstraint.lecm-workflow_workflow-type-constraint.SIGNING=Signing
 
 lecm-workflow_workflow-model.type.lecm-workflow_workflow-assignees-list.title=Assignees list
-lecm-workflow_workflow-model.association.lecm-workflow_workflow-assignees-list-owner-assoc.title=Assignees list owner
 lecm-workflow_workflow-model.association.lecm-workflow_workflow-assignees-list-contains-assignee.title=Assignees list contains assignee
 
 lecm-workflow_workflow-model.type.lecm-workflow_assignee.title=Assignee
@@ -17,15 +16,23 @@ lecm-workflow_workflow-model.association.lecm-workflow_assignee-organization-ele
 
 lecm-workflow_workflow-model.type.lecm-workflow_route.title=Route
 lecm-workflow_workflow-model.property.lecm-workflow_is-register-after-signed.title=Register after sign
-lecm-workflow_workflow-model.association.lecm-workflow_route-to-employee-assoc.title=Route owner
 lecm-workflow_workflow-model.association.lecm-workflow_route-contains-workflow-assignees-list.title=Route contains assignees list
+
 lecm-workflow_workflow-model.aspect.lecm-workflow_workflow-route-aspect.title=Route aspect
+
 lecm-workflow_workflow-model.aspect.lecm-workflow_temp.title=Default assignees list
+
 lecm-workflow_workflow-model.aspect.lecm-workflow_workflow-type-aspect.title=Workflow type aspect
 lecm-workflow_workflow-model.property.lecm-workflow_workflow-type.title=Workflow type
+
 lecm-workflow_workflow-model.aspect.lecm-workflow_workflow-concurrency-aspect.title=Workflow concurrency aspect
 lecm-workflow_workflow-model.property.lecm-workflow_workflow-concurrency.title=Workflow concurrency
+
 lecm-workflow_workflow-model.aspect.lecm-workflow_assignee-order-aspect.title=Assignee order aspect
 lecm-workflow_workflow-model.property.lecm-workflow_assignee-order.title=Assignee order
+
 lecm-workflow_workflow-model.aspect.lecm-workflow_assignee-days-to-complete-aspect.title=Days number to complete aspect
 lecm-workflow_workflow-model.property.lecm-workflow_assignee-days-to-complete.title=Days number to complete
+
+lecm-workflow_workflow-model.aspect.lecm-workflow_owner-aspect.title=Aspect route or assignees list owner
+lecm-workflow_workflow-model.association.lecm-workflow_workflow-assignees-list-owner-assoc.title=Assignees list owner
