--- a/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/form.properties
+++ b/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/form.properties
@@ -14,3 +14,4 @@ label.routes.new-common-route.title=Creation of new common route
 label.routes.new-private-route.title=Creation of new private route
 button.new-private-route=Create private route
 button.new-common-route=Create common route
+header.routes.label=Document routes
