Заготовка для проверки лицензии
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6617 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -381,8 +381,8 @@
             <version>${platform.version}</version>
             <scope>runtime</scope>
             <type>amp</type>
-        </dependency>-->
-		
+        </dependency-->
+
 	</dependencies>
 
 	<build>
