--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -318,7 +318,7 @@
             <version>${platform.version}</version>
             <scope>runtime</scope>
             <type>amp</type>
-        </dependency>-->
+        </dependency-->
 	</dependencies>
 
 	<build>
