--- a/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm.properties
@@ -8,6 +8,8 @@ lecm-arm_model.association.lecm-arm_business-roles-assoc.title=Business roles
 lecm-arm_model.type.lecm-arm_node.title=Node
 lecm-arm_model.association.lecm-arm_node-child-rule-assoc.title=Query
 
+lecm-arm_model.type.lecm-arm_reports-node.title=Reports node
+
 lecm-arm_model.property.lecm-arm_types.title=Types
 lecm-arm_model.property.lecm-arm_order.title=Order
 lecm-arm_model.property.lecm-arm_search-query.title=Search query
