[+] ALF-1907. Групповые операции. Добавлена сортировка для полей формы ввода данных операции
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6619 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-group-actions/repo/src/main/config/messages/group-actions.properties
+++ b/lecm-group-actions/repo/src/main/config/messages/group-actions.properties
@@ -5,6 +5,6 @@ lecm-group-actions_model.property.lecm-group-actions_isGroup.title=Group Action
 lecm-group-actions_model.property.lecm-group-actions_order.title=Priority
 lecm-group-actions_model.property.lecm-group-actions_script.title=Script
 lecm-group-actions_model.property.lecm-group-actions_form-fields-ref.title=Script Data
-lecm-group-actions_model.property.lecm-group-actions_field-id=Field Id
+lecm-group-actions_model.property.lecm-group-actions_field-id.title=Field Id
 lecm-group-actions_model.property.lecm-group-actions_field-type.title=Data Type
 lecm-group-actions_model.property.lecm-group-actions_forCollection.title=For Collection
