ALF-1897 Обеспечить возможность выбора шаблона отчета пользователем: - подчищены неиспользуемые скрипты - контрол для выбора шаблона из родителя - пути к файлам с шаблонами - ошибки в интерфейсах РО
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6624 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor.properties
@@ -82,6 +82,5 @@ lecm-rpeditor_model.association.lecm-rpeditor_reportProviderAssoc.description=Re
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateAssoc.title=Report Template
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateAssoc.description=Report Template
 
-
-
-
+lecm-rpeditor_model.association.lecm-rpeditor_parentReportTemplateAssoc.title=Parent Template
+lecm-rpeditor_model.association.lecm-rpeditor_parentReportTemplateAssoc.description=Parent Template
