актуализировал настройки для форм согласования и подписания
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6628 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/repo/src/main/config/messages/lecm-workflow.properties
+++ b/lecm-workflow/repo/src/main/config/messages/lecm-workflow.properties
@@ -29,7 +29,7 @@ lecm-workflow_workflow-model.aspect.lecm-workflow_workflow-concurrency-aspect.ti
 lecm-workflow_workflow-model.property.lecm-workflow_workflow-concurrency.title=Workflow concurrency
 
 lecm-workflow_workflow-model.aspect.lecm-workflow_assignee-order-aspect.title=Assignee order aspect
-lecm-workflow_workflow-model.property.lecm-workflow_assignee-order.title=Assignee order
+lecm-workflow_workflow-model.property.lecm-workflow_assignee-order.title=Order
 
 lecm-workflow_workflow-model.aspect.lecm-workflow_assignee-days-to-complete-aspect.title=Days number to complete aspect
 lecm-workflow_workflow-model.property.lecm-workflow_assignee-days-to-complete.title=Days number to complete
