--- a/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/route.properties
+++ b/lecm-workflow/share/src/main/resources/alfresco/web-extension/ru/it/lecm/workflow/route.properties
@@ -1,1 +1,2 @@
 ru.it.lecm.workflow.route.message=Do you want to start document workflow using route?
+ru.it.lecm.workflow.route.label=\u041c\u0430\u0440\u0448\u0440\u0443\u0442
