--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form.properties
@@ -10,3 +10,4 @@ label.arm.field.add.fromModel=Add fields form model
 
 label.new-filter.btn=New Filter
 label.create-filter.title=Create Filter
+arm.title.filteredLabel=(filtered)
